--- a/MyVagon/ViewController/Home/PickUpDropOffCell.xib
+++ b/MyVagon/ViewController/Home/PickUpDropOffCell.xib
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PickUpDropOffCell" id="KGk-i7-Jjw" customClass="PickUpDropOffCell" customModule="MyVagon" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="502" height="158"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PickUpDropOffCell" rowHeight="155" id="KGk-i7-Jjw" customClass="PickUpDropOffCell" customModule="MyVagon" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="511" height="155"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="502" height="158"/>
+                <rect key="frame" x="0.0" y="0.0" width="511" height="155"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ln7-dh-Shk">
-                        <rect key="frame" x="15" y="10" width="472" height="138"/>
+                        <rect key="frame" x="15" y="10" width="481" height="138"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZJu-GY-sBV">
-                                <rect key="frame" x="0.0" y="0.0" width="472" height="138"/>
+                                <rect key="frame" x="0.0" y="0.0" width="481" height="138"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" sectionFooterHeight="-1" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KdB-WX-RyY">
-                                        <rect key="frame" x="0.0" y="0.0" width="472" height="128"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="481" height="128"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="128" id="iVF-xS-iUp"/>
@@ -38,19 +38,19 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="KdB-WX-RyY" firstAttribute="leading" secondItem="ZJu-GY-sBV" secondAttribute="leading" id="DO1-oV-pez"/>
-                                    <constraint firstAttribute="trailing" secondItem="KdB-WX-RyY" secondAttribute="trailing" id="Np4-Iu-7Z6"/>
-                                    <constraint firstAttribute="bottom" secondItem="KdB-WX-RyY" secondAttribute="bottom" id="nth-R8-Vg9"/>
-                                    <constraint firstItem="KdB-WX-RyY" firstAttribute="top" secondItem="ZJu-GY-sBV" secondAttribute="top" id="x43-BV-qMj"/>
+                                    <constraint firstAttribute="trailing" secondItem="KdB-WX-RyY" secondAttribute="trailing" id="Sl1-mC-DVW"/>
+                                    <constraint firstItem="KdB-WX-RyY" firstAttribute="top" secondItem="ZJu-GY-sBV" secondAttribute="top" id="bVv-ic-fs5"/>
+                                    <constraint firstAttribute="bottom" secondItem="KdB-WX-RyY" secondAttribute="bottom" constant="12" id="qEz-6k-lcs"/>
+                                    <constraint firstItem="KdB-WX-RyY" firstAttribute="leading" secondItem="ZJu-GY-sBV" secondAttribute="leading" id="vtA-yF-23I"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="ZJu-GY-sBV" secondAttribute="trailing" id="ane-5c-NXh"/>
-                            <constraint firstItem="ZJu-GY-sBV" firstAttribute="top" secondItem="Ln7-dh-Shk" secondAttribute="top" id="bnF-fL-kIm"/>
-                            <constraint firstItem="ZJu-GY-sBV" firstAttribute="leading" secondItem="Ln7-dh-Shk" secondAttribute="leading" id="pPd-Qy-J8y"/>
-                            <constraint firstAttribute="bottom" secondItem="ZJu-GY-sBV" secondAttribute="bottom" id="sdz-I7-40M"/>
+                            <constraint firstItem="ZJu-GY-sBV" firstAttribute="top" secondItem="Ln7-dh-Shk" secondAttribute="top" id="MQq-Ax-vTm"/>
+                            <constraint firstAttribute="bottom" secondItem="ZJu-GY-sBV" secondAttribute="bottom" id="RQe-Ni-lF2"/>
+                            <constraint firstItem="ZJu-GY-sBV" firstAttribute="leading" secondItem="Ln7-dh-Shk" secondAttribute="leading" id="dQX-XW-Zob"/>
+                            <constraint firstAttribute="trailing" secondItem="ZJu-GY-sBV" secondAttribute="trailing" id="eCW-GN-Y6S"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -69,7 +69,7 @@
                 <outlet property="tblMultipleLocation" destination="KdB-WX-RyY" id="viy-R5-965"/>
                 <outlet property="viewContents" destination="ZJu-GY-sBV" id="kHt-UF-3W5"/>
             </connections>
-            <point key="canvasLocation" x="191.30434782608697" y="77.008928571428569"/>
+            <point key="canvasLocation" x="197.82608695652175" y="75.334821428571431"/>
         </tableViewCell>
     </objects>
 </document>
