--- a/MyVagon/ViewController/Schedule/MyLoadesCell.xib
+++ b/MyVagon/ViewController/Schedule/MyLoadesCell.xib
@@ -10,21 +10,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="MyLoadesCell" rowHeight="160" id="KGk-i7-Jjw" customClass="MyLoadesCell" customModule="MyVagon" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="527" height="160"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="MyLoadesCell" rowHeight="158" id="KGk-i7-Jjw" customClass="MyLoadesCell" customModule="MyVagon" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="538" height="158"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="527" height="160"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="538" height="158"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ln7-dh-Shk">
-                        <rect key="frame" x="15" y="10" width="497" height="140"/>
+                    <view userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ln7-dh-Shk">
+                        <rect key="frame" x="15" y="0.0" width="508" height="148"/>
                         <subviews>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZJu-GY-sBV">
-                                <rect key="frame" x="0.0" y="0.0" width="497" height="140"/>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZJu-GY-sBV">
+                                <rect key="frame" x="0.0" y="0.0" width="508" height="140"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KdB-WX-RyY">
-                                        <rect key="frame" x="0.0" y="0.0" width="497" height="128"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KdB-WX-RyY">
+                                        <rect key="frame" x="0.0" y="0.0" width="508" height="128"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="128" id="iVF-xS-iUp"/>
                                         </constraints>
@@ -46,19 +47,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="ZJu-GY-sBV" secondAttribute="trailing" id="ane-5c-NXh"/>
-                            <constraint firstItem="ZJu-GY-sBV" firstAttribute="top" secondItem="Ln7-dh-Shk" secondAttribute="top" id="bnF-fL-kIm"/>
-                            <constraint firstItem="ZJu-GY-sBV" firstAttribute="leading" secondItem="Ln7-dh-Shk" secondAttribute="leading" id="pPd-Qy-J8y"/>
-                            <constraint firstAttribute="bottom" secondItem="ZJu-GY-sBV" secondAttribute="bottom" id="sdz-I7-40M"/>
+                            <constraint firstAttribute="trailing" secondItem="ZJu-GY-sBV" secondAttribute="trailing" id="JIH-1t-ZjR"/>
+                            <constraint firstAttribute="bottom" secondItem="ZJu-GY-sBV" secondAttribute="bottom" id="Nn9-YJ-Vfu"/>
+                            <constraint firstItem="ZJu-GY-sBV" firstAttribute="top" secondItem="Ln7-dh-Shk" secondAttribute="top" id="hbS-ob-qAk"/>
+                            <constraint firstItem="ZJu-GY-sBV" firstAttribute="leading" secondItem="Ln7-dh-Shk" secondAttribute="leading" id="u3G-E7-25c"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="Ln7-dh-Shk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="dAT-I5-qig"/>
-                    <constraint firstItem="Ln7-dh-Shk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="kHr-Q0-FJE"/>
-                    <constraint firstAttribute="trailing" secondItem="Ln7-dh-Shk" secondAttribute="trailing" constant="15" id="oD2-Em-GH8"/>
-                    <constraint firstAttribute="bottom" secondItem="Ln7-dh-Shk" secondAttribute="bottom" constant="10" id="zXu-Yf-soy"/>
+                    <constraint firstAttribute="trailing" secondItem="Ln7-dh-Shk" secondAttribute="trailing" constant="15" id="10V-j9-U4U"/>
+                    <constraint firstAttribute="bottom" secondItem="Ln7-dh-Shk" secondAttribute="bottom" constant="10" id="dyy-Fa-uwQ"/>
+                    <constraint firstItem="Ln7-dh-Shk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="wFi-zZ-5Cx"/>
+                    <constraint firstItem="Ln7-dh-Shk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="zMj-Wf-hNU"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -68,7 +69,7 @@
                 <outlet property="tblMultipleLocation" destination="KdB-WX-RyY" id="viy-R5-965"/>
                 <outlet property="viewContents" destination="ZJu-GY-sBV" id="kHt-UF-3W5"/>
             </connections>
-            <point key="canvasLocation" x="209.42028985507247" y="77.678571428571431"/>
+            <point key="canvasLocation" x="217.39130434782609" y="77.008928571428569"/>
         </tableViewCell>
     </objects>
 </document>
