--- a/MyVagon/Storyboard/Home.storyboard
+++ b/MyVagon/Storyboard/Home.storyboard
@@ -5727,23 +5727,24 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="748"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AtK-4G-Xnp">
-                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1608"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1578"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zTb-uw-UBj">
-                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="962"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="932"/>
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G3e-JQ-dgz">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zlg-ui-MeT">
-                                                                                <rect key="frame" x="0.0" y="5" width="414" height="44.5"/>
+                                                                                <rect key="frame" x="0.0" y="5" width="414" height="40"/>
                                                                                 <subviews>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uk6-yE-5k5" customClass="StepIndicatorView" customModule="MyVagon" customModuleProvider="target">
-                                                                                        <rect key="frame" x="20" y="0.0" width="374" height="44.5"/>
+                                                                                        <rect key="frame" x="20" y="0.0" width="374" height="40"/>
                                                                                     </view>
                                                                                 </subviews>
                                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 <constraints>
+                                                                                    <constraint firstAttribute="height" constant="40" id="1bq-bg-1U4"/>
                                                                                     <constraint firstItem="Uk6-yE-5k5" firstAttribute="top" secondItem="Zlg-ui-MeT" secondAttribute="top" id="3Au-Gk-Kcy"/>
                                                                                     <constraint firstAttribute="trailing" secondItem="Uk6-yE-5k5" secondAttribute="trailing" constant="20" id="J9a-AT-bau"/>
                                                                                     <constraint firstItem="Uk6-yE-5k5" firstAttribute="leading" secondItem="Zlg-ui-MeT" secondAttribute="leading" constant="20" id="g3J-1n-L81"/>
@@ -5751,7 +5752,7 @@
                                                                                 </constraints>
                                                                             </view>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 days to go" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="itq-72-9CA" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                                                <rect key="frame" x="0.0" y="54.5" width="414" height="20.5"/>
+                                                                                <rect key="frame" x="160" y="15" width="94" height="20.5"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -5768,18 +5769,16 @@
                                                                         </subviews>
                                                                         <color key="backgroundColor" red="0.97647058823529409" green="0.94509803921568625" blue="0.87450980392156863" alpha="1" colorSpace="calibratedRGB"/>
                                                                         <constraints>
+                                                                            <constraint firstItem="itq-72-9CA" firstAttribute="centerY" secondItem="G3e-JQ-dgz" secondAttribute="centerY" id="2OK-iK-QgU"/>
                                                                             <constraint firstAttribute="trailing" secondItem="Zlg-ui-MeT" secondAttribute="trailing" id="FEx-s8-vft"/>
-                                                                            <constraint firstItem="itq-72-9CA" firstAttribute="leading" secondItem="G3e-JQ-dgz" secondAttribute="leading" id="Z8w-0V-yzJ"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="Zlg-ui-MeT" secondAttribute="bottom" constant="5" id="POr-ZG-52w"/>
+                                                                            <constraint firstItem="itq-72-9CA" firstAttribute="centerX" secondItem="G3e-JQ-dgz" secondAttribute="centerX" id="b18-R6-a9u"/>
                                                                             <constraint firstItem="Zlg-ui-MeT" firstAttribute="leading" secondItem="G3e-JQ-dgz" secondAttribute="leading" id="gti-Ht-wIm"/>
-                                                                            <constraint firstItem="itq-72-9CA" firstAttribute="top" secondItem="Zlg-ui-MeT" secondAttribute="bottom" constant="5" id="jqc-8R-fw8"/>
-                                                                            <constraint firstAttribute="trailing" secondItem="itq-72-9CA" secondAttribute="trailing" id="l33-hq-em1"/>
                                                                             <constraint firstItem="Zlg-ui-MeT" firstAttribute="top" secondItem="G3e-JQ-dgz" secondAttribute="top" constant="5" id="mfP-K0-MNz"/>
-                                                                            <constraint firstAttribute="bottom" secondItem="itq-72-9CA" secondAttribute="bottom" constant="5" id="vRt-6U-vTf"/>
-                                                                            <constraint firstAttribute="height" constant="80" id="xnc-mo-vUR"/>
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fsc-fO-GQR">
-                                                                        <rect key="frame" x="0.0" y="80" width="414" height="265"/>
+                                                                        <rect key="frame" x="0.0" y="50" width="414" height="265"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S9R-IW-Uek" customClass="GMSMapView">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="265"/>
@@ -5796,7 +5795,7 @@
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sa2-4J-BnU">
-                                                                        <rect key="frame" x="0.0" y="345" width="414" height="523"/>
+                                                                        <rect key="frame" x="0.0" y="315" width="414" height="523"/>
                                                                         <subviews>
                                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="KoX-fB-EOO">
                                                                                 <rect key="frame" x="20" y="20" width="374" height="483"/>
@@ -6113,7 +6112,7 @@
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cWg-a4-ewW">
-                                                                        <rect key="frame" x="0.0" y="868" width="414" height="94"/>
+                                                                        <rect key="frame" x="0.0" y="838" width="414" height="94"/>
                                                                         <subviews>
                                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="lLe-NA-fff">
                                                                                 <rect key="frame" x="20" y="7" width="374" height="80"/>
@@ -6262,7 +6261,7 @@
                                                                 </subviews>
                                                             </stackView>
                                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="L3b-wQ-LHS">
-                                                                <rect key="frame" x="0.0" y="982" width="414" height="381"/>
+                                                                <rect key="frame" x="0.0" y="952" width="414" height="381"/>
                                                                 <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="381" id="r4a-Cg-N7a"/>
@@ -6273,7 +6272,7 @@
                                                                 </connections>
                                                             </tableView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="iSo-u1-BvK">
-                                                                <rect key="frame" x="0.0" y="1383" width="414" height="205"/>
+                                                                <rect key="frame" x="0.0" y="1353" width="414" height="205"/>
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Q3-ar-LXY">
                                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="128"/>
